--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <!-- Reasons section -->
         </section id="reasons">
         <section>
-            <h1>Why Love Running With Us?</h1>
+            <h2>Why Love Running With Us?</h2>
             <div id="benefits">
 
                 <div id="benefits-physical">
@@ -87,6 +87,9 @@
                             you out of a running funk or low mood, and inspire you to try new events.</p>
 
                     </div>
+                </div>
+                <div id="benefits-image"> 
+                    <div id="circle-cover-bg"></div>
                 </div>
 
             </div>
