--- a/index.html
+++ b/index.html
@@ -101,6 +101,48 @@
 
     </main>
 
+    <!-- Meetup times section -->
+    <section id="meetups">
+        <h2>Meet-up Times</h2>
+        <div id="times">
+            <div>
+                <h3>URBAN <i class="fa-solid fa-city"></i></h3>
+                <p>MONDAY</p>
+                <p>5K</p>
+                <p>THE MARKER HOTEL</p>
+                <p>18:30</p>
+            </div>
+            <div>
+                <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
+                <p>WEDNESDAY</p>
+                <p>10K</p>
+                <p>THE PHOENIX PARK</p>
+                <p>18:30</p>
+            </div>
+            <div>
+                <h3>URBAN <i class="fa-solid fa-city"></i></h3>
+                <p>FRIDAY</p>
+                <p>5K</p>
+                <p>THE MARKER HOTEL</p>
+                <p>18:30</p>
+            </div>
+            <div>
+                <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
+                <p>SATURDAY</p>
+                <p>10K</p>
+                <p>THE PHOENIX PARK</p>
+                <p>9:30</p>
+            </div>
+            <div>
+                <h3>COFFEE <i class="fa-solid fa-mug-hot"></i></h3>
+                <p>SUNDAY</p>
+                <p>0K</p>
+                <p>THE MARKER HOTEL</p>
+                <p>11:30</p>
+            </div>
+        </div>    
+
+    </section>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
